--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.nio.file.Files
+
 plugins {
     id 'fabric-loom' version '1.5-SNAPSHOT'
     id 'maven-publish'
@@ -54,11 +56,22 @@ jar {
 }
 
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
+    repositories {
+        maven {
+            name = "GithubPackages"
+            url = uri("https://maven.pkg.github.com/eclipseisoffline/modifyplayerdata")
+            credentials {
+                username = "eclipseisoffline"
+                password = Files.readString(java.nio.file.Path.of("./github_auth"))
+            }
         }
     }
 
-    repositories {}
+    publications {
+        gpr(MavenPublication) {
+            artifactId project.archives_base_name
+
+            from components.java
+        }
+    }
 }
