--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.5-pre1
-yarn_mappings=1.20.5-pre1+build.5
+minecraft_version=1.20.5-rc2
+yarn_mappings=1.20.5-rc2+build.1
 loader_version=0.15.9
 
 # Mod Properties
