--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.5
-yarn_mappings=1.20.5+build.1
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.3
 loader_version=0.15.10
 
 # Mod Properties
-mod_version=0.2.2-1.20.5
+mod_version=0.2.2-1.20.5+6
+supported_versions=>=1.20.5 <=1.20.6
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
