--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.3
+minecraft_version=24w38a
+yarn_mappings=24w38a+build.5
+loader_version=0.16.5
 
 # Mod Properties
-mod_version=0.2.2-1.21.1
-supported_versions=>=1.21 <=1.21.1
+mod_version=0.2.2-24w38a
+supported_versions=1.21.2-alpha.24.38.a
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
