Update to 1.21.2-pre1

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=24w40a
-yarn_mappings=24w40a+build.2
+minecraft_version=1.21.2-pre1
+yarn_mappings=1.21.2-pre1+build.1
 loader_version=0.16.5
 
 # Mod Properties
-mod_version=0.2.2-24w40a
-supported_versions=1.21.2-alpha.24.40.a
+mod_version=0.2.2-1.21.2-pre1
+supported_versions=1.21.2-beta.1
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
