--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.2-pre1
-yarn_mappings=1.21.2-pre1+build.1
-loader_version=0.16.5
+minecraft_version=1.21.2
+yarn_mappings=1.21.2+build.1
+loader_version=0.16.7
 
 # Mod Properties
-mod_version=0.2.2-1.21.2-pre1
-supported_versions=1.21.2-beta.1
+mod_version=0.2.2-1.21.2
+supported_versions=1.21.2
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
