--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.1
-loader_version=0.16.9
+minecraft_version=25w02a
+yarn_mappings=25w02a+build.3
+loader_version=0.16.10
 
 # Mod Properties
-mod_version=0.2.3-1.21.4
-supported_versions=1.21.4
+mod_version=0.2.3-25w02a
+supported_versions=1.21.5-alpha.25.2.a
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
