--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.6
-yarn_mappings=1.21.6+build.1
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.1
 loader_version=0.16.14
 
 # Mod Properties
-mod_version=0.3.1-1.21.6
-supported_versions=1.21.6
+mod_version=0.3.1-1.21.7
+supported_versions=>=1.21.6 <=1.21.7
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
 
 # Publishing
 release_type=STABLE
-release_minecraft_versions=1.21.6
+release_minecraft_versions=1.21.6,1.21.7
