--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.21.9
-yarn_mappings=1.21.9+build.1
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.1
 loader_version=0.17.2
 
 # Mod Properties
-mod_version=0.3.1-1.21.9
-supported_versions=1.21.9
+mod_version=0.3.1-1.21.10
+supported_versions=>=1.21.9 <=1.21.10
 maven_group=xyz.eclipseisoffline
 archives_base_name=modifyplayerdata
 
 # Publishing
 release_type=STABLE
-release_minecraft_versions=1.21.9
+release_minecraft_versions=1.21.9,1.21.10
